feat: complete booking service integration